# tdd-adk

./: .gitignore  .pre-commit-config.yaml  IMPLEMENTATION.md  README.md  flake.nix  pyproject.toml  tdd-dataflow.d2  tdflow-architecture.d2
.copilot/skills/jj-tdd/: SKILLS.md
.direnv/: flake-profile-1-link
.github/: chat-participant.json  copilot-instructions.md
.github/agents/: README.md  debug-one.md  explore-files.md  generate-tests.md  plan-tests.md  revise-patch.md
.github/prompts/: prek-check.md  tdd-debug-one.md  tdd-explore-files.md  tdd-full-cycle.md  tdd-generate-tests.md  tdd-green-phase.md  tdd-plan-tests.md  tdd-red-phase.md  tdd-refactor-phase.md  tdd-revise-patch.md  uv-guide.md
.github/skills/jj/: SKILLS.md
.github/skills/prek/: SKILLS.md
.github/skills/tdd/: README.md  SKILLS.md  anti-test-hacking.md  tdflow-prompts.md
.github/skills/uv/: SKILLS.md
.github/workflows/: ci.yml  prek.yml
examples/: programmatic_usage.py  red_phase_only.json  simple_tdd_cycle.json  validation_tdd_cycle.json
src/tdd_eval/: __init__.py  cli.py  evaluators.py  models.py
tests/: __init__.py  test_evaluators.py  test_models.py
